src/_sass/base.scss
/* Custom Styles */

@import "vars";
@import "bootstrap-5.3.3/scss/bootstrap.scss";
@import "bootstrap-icons-1.11.3/bootstrap-icons.scss";
@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");

@function invert($color, $amount: 100%) {
    $inverse: change-color($color, $hue: hue($color) + 180);
    @return mix($inverse, $color, $amount);
}

body {
    font-family: "Plus Jakarta Sans", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

//////////////Styles for Events page by Shane////////////////////

main {
    background-image: $background-img;
}

.events {
    margin-bottom: 100px;
}

.col {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 50px;

    .card {
        display: flex;
        flex-direction: row;
        align-items: center;
        border: 5px black solid;
        margin: 10px;
        word-wrap: break-word;
        width: 780px;
        height: 289px;

        img {
            height: 200px;
            width: 200px;
            margin: 40px;
        }

        .info {

            .date {
                color: $dark-purple;
                font-weight: bold;
            }

            p {
                margin-bottom: 25px;
            }

            button {
                // width: 470px;
                background: linear-gradient(311deg, $dark-purple 0%, $less-light-purple 40%, $light-purple 100%);
                border: $light-purple;
                border-radius: 8px;
                box-shadow: 0 0px 10px 0px $light-purple-less-opacity;
                padding: 7px;
                padding-top: 4px;

                span {
                    border: 8px solid $no-opcaity-color;
                    font-size: 11.5px;
                }
            }
        }
    }
}
/////////////////////////////////////////////////////////////////

